# codesynapse

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/codesynapse/: __init__.py  builder.py  cache.py  cli.py  complexity.py  parallel.py  parser.py  rules.py  serializer.py  visualizer.py
tests/: README.md  conftest.py  test_builder.py  test_init.py  test_parser.py  test_rules.py  test_visualizer.py
